fix: add overflow-x property to functional image container

--- a/src/Components/UI/FunctionalIlustration/FunctionalIlustration.css
+++ b/src/Components/UI/FunctionalIlustration/FunctionalIlustration.css
@@ -2,6 +2,7 @@
   width: 350px;
   height: 520px;
   overflow-y: hidden;
+  overflow-x: hidden;
 }
 .functional-ilustration {
   width: 343px;
